--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
+    "sweetalert2": "^11.11.0",
     "swiper": "^8.4.7"
   },
   "scripts": {
