--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.9.0",
     "cra-template": "1.2.0",
     "crypto-js": "^4.2.0",
     "firebase": "^10.7.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
